--- a/ai-engine/requirements.txt
+++ b/ai-engine/requirements.txt
@@ -1,8 +1,11 @@
-transformers==4.35.2
-torch==2.1.1
-spacy==3.7.2
-textblob==0.17.1
-scikit-learn==1.3.2
-pandas==2.1.3
-numpy==1.26.2
-python-dotenv==1.0.0
+fastapi
+uvicorn
+pydantic
+requests
+beautifulsoup4
+spacy
+textblob
+transformers
+torch
+numpy
+scikit-learn
