--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,14 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-firebase-admin==6.2.0
-motor==3.3.2
-pydantic==2.5.2
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-requests==2.31.0
-email-validator==2.1.0
-python-multipart==0.0.6
+fastapi
+uvicorn
+motor
+firebase-admin
+pydantic-settings
+python-multipart
+requests
+httpx
+email-validator
+python-dotenv
+beautifulsoup4
+deep-translator
+
+
