--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,4 @@ GOOGLE_APPLICATION_CREDENTIALS="app/core/firebase_credentials.json"
 GOOGLE_FACT_CHECK_KEY=""
 NEWS_API_KEY=""
 GEMINI_API_KEY=""
+GROQ_API_KEY=""
